fix and add crud plants

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     </head>
 <body>
-
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
-            <a href="#" class="navbar-brand">Farmer Nusantara</a>
+            <a href="index.html" class="navbar-brand">Farmer Nusantara</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="mx-auto"></div>
                 <ul class="navbar-nav">
@@ -51,15 +50,15 @@
 
     <div class="p-img2">
         <div class="p-text">
-            <span>
-                Plants
-            </span>
+            <a href="crud-plants.html">
+                <span>Plants</span>
+            </a>
         </div>
     </div>
     <section class="section" id="plants">
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
-                <article class="card card--1">
+                <article class="card card--1 border-0">
                     <div class="card__info-hover"></div>
                     <div class="card__img"></div>
                         <a href="#" class="card_link">
@@ -72,7 +71,7 @@
                 </article>
             </div>
             <div class="col">
-                <article class="card card--2">
+                <article class="card card--2 border-0">
                     <div class="card__info-hover"></div>
                     <div class="card__img"></div>
                         <a href="#" class="card_link">
@@ -85,7 +84,7 @@
                 </article>
             </div>
             <div class="col">
-                <article class="card card--3">
+                <article class="card card--3 border-0">
                     <div class="card__info-hover"></div>
                     <div class="card__img"></div>
                         <a href="#" class="card_link">
@@ -110,7 +109,7 @@
     <section class="section" id="articles">
         <div class="row row-cols-3 row-cols-md-4 g-4">
             <div class="col">
-                <article class="card card--1">
+                <article class="card card--1 border-0">
                     <div class="card__info-hover">
                         <svg class="card__user" viewBox="0 0 24 24">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -136,7 +135,7 @@
                 </article>
             </div>
             <div class="col">
-                <article class="card card--1">
+                <article class="card card--1 border-0">
                     <div class="card__info-hover">
                         <svg class="card__user" viewBox="0 0 24 24">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -162,7 +161,7 @@
                 </article>
             </div>
             <div class="col">
-                <article class="card card--1">
+                <article class="card card--1 border-0">
                     <div class="card__info-hover">
                         <svg class="card__user" viewBox="0 0 24 24">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -188,7 +187,7 @@
                 </article>
             </div>
             <div class="col">
-                <article class="card card--1">
+                <article class="card card--1 border-0">
                     <div class="card__info-hover">
                         <svg class="card__user" viewBox="0 0 24 24">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -232,6 +231,7 @@
             </div>
         </div>
     </section>
+
     <footer>
             <a href="#" class="copyright">FaSa &#169; 2022</a>
     </footer>
