add crud articles

--- a/crud-articles.html
+++ b/crud-articles.html
@@ -37,28 +37,20 @@
         <main class="formMain">
             <div class="py-5 text-center">
                 <img src="img/farmer_nusantara_logo_transparent.png" alt="" class="d-block mx-auto mb-4" width="300">
-                <h2>Plants Form</h2>
-                <p class="lead">This is a form for add information about plants</p>
+                <h2>Articles Form</h2>
+                <p class="lead">This is a form for add information about articles plants</p>
             </div>
             <div class="card border-0 mx-auto">
                 <div class="row g-5">
                     <div class="col-md-7 col-lg-12">
-                        <h4 class="mb-3 text-center">Plants Information</h4>
+                        <h4 class="mb-3 text-center">Articles Information</h4>
                         <form class="needs-validation" novalidate>
                         <div class="row g-3">
-                            <div class="col-6">
-                                <label for="firstName" class="form-label">First name</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                            <div class="col-12">
+                                <label for="articleTitle" class="form-label">Article Title</label>
+                                <input type="text" class="form-control" id="articleTitle" placeholder="" value="" required>
                                 <div class="invalid-feedback">
                                     Valid first name is required.
-                                </div>
-                            </div>
-    
-                            <div class="col-6">
-                                <label for="lastName" class="form-label">Last name</label>
-                                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                                <div class="invalid-feedback">
-                                    Valid last name is required.
                                 </div>
                             </div>
     
