--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="mx-auto"></div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#home" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="#plants" class="nav-link">Plants</a>
@@ -37,7 +37,7 @@
         </div>
     </nav>
 
-    <div class="p-img1">
+    <div class="p-img1" id="home">
         <div class="p-text">
             <span>
                 Farmer Nusantara
@@ -48,14 +48,14 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, expedita nobis at provident consequuntur dolorum quos inventore ratione autem labore obcaecati quas corporis dicta commodi adipisci voluptatum maiores veniam reiciendis nam facilis atque. Sequi amet, totam in ut aliquid velit neque, tempora temporibus autem praesentium quis quod esse, dolorem beatae placeat? Sint quibusdam ullam assumenda corporis sapiente laboriosam nihil placeat, amet, dolores quia quaerat dolor soluta pariatur, delectus debitis sit mollitia. Eaque, nulla magnam esse rerum deserunt laudantium tempora quibusdam ipsam dolore velit voluptatibus ipsa corporis ducimus porro odio sequi vitae. Autem qui aliquam recusandae eveniet amet aspernatur in neque.</p>
     </section>
 
-    <div class="p-img2">
+    <div class="p-img2" id="plants">
         <div class="p-text">
             <a href="crud-plants.html">
                 <span>Plants</span>
             </a>
         </div>
     </div>
-    <section class="section" id="plants">
+    <section class="section" >
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <article class="card card--1 border-0">
@@ -99,14 +99,14 @@
         </div>
     </section>
 
-    <div class="p-img3">
+    <div class="p-img3" id="articles">
         <div class="p-text">
-            <span>
-                Articles
-            </span>
+            <a href="crud-articles.html">
+                <span>Articles</span>
+            </a>
         </div>
     </div>
-    <section class="section" id="articles">
+    <section class="section" >
         <div class="row row-cols-3 row-cols-md-4 g-4">
             <div class="col">
                 <article class="card card--1 border-0">
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="card__img"></div>
-                        <a href="#" class="card_link">
+                        <a href="detail-articles.html" class="card_link">
                             <div class="card__img--hover"></div>
                         </a>
                         <div class="card__info">
@@ -215,14 +215,14 @@
         </div>
     </section>
 
-    <div class="p-img4">
+    <div class="p-img4" id="faqs">
         <div class="p-text-1">
             <span>
                 FAQs
             </span>
         </div>
     </div>
-    <section class="section" id="faqs">
+    <section class="section" >
         <div class="d-grid gap-2 col-6 mx-auto">
             <button class="collapsible">What? 
             </button>
