--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
             <a href="index.html" class="navbar-brand">Farmer Nusantara</a>
+            <button 
+                type="button"
+                class="navbar-toggler"
+                data-bs-target="#navbarNav"
+                data-bs-toggle="collapse"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle Navbar"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="mx-auto"></div>
                 <ul class="navbar-nav">
@@ -107,7 +118,7 @@
         </div>
     </div>
     <section class="section" >
-        <div class="row row-cols-3 row-cols-md-4 g-4">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <article class="card card--1 border-0">
                     <div class="card__info-hover">
@@ -150,7 +161,7 @@
                         </div>
                     </div>
                     <div class="card__img"></div>
-                        <a href="#" class="card_link">
+                        <a href="detail-articles.html" class="card_link">
                             <div class="card__img--hover"></div>
                         </a>
                         <div class="card__info">
@@ -176,7 +187,7 @@
                         </div>
                     </div>
                     <div class="card__img"></div>
-                        <a href="#" class="card_link">
+                        <a href="detail-articles.html" class="card_link">
                             <div class="card__img--hover"></div>
                         </a>
                         <div class="card__info">
@@ -202,7 +213,7 @@
                         </div>
                     </div>
                     <div class="card__img"></div>
-                        <a href="#" class="card_link">
+                        <a href="detail-articles.html" class="card_link">
                             <div class="card__img--hover"></div>
                         </a>
                         <div class="card__info">
