--- a/detail-articles.html
+++ b/detail-articles.html
@@ -59,7 +59,7 @@
 
         <div class="row g-5">
             <div class="col-md-8">
-                <img src="img/paddy-leaves.jpg" alt="" width="700px" height="400px">
+                <img src="img/paddy-leaves.jpg" alt="" class="responsive">
                 <ul class="list-unstyled articles-details">
                     <li>
                         <a href="">
