--- a/crud-articles.html
+++ b/crud-articles.html
@@ -37,7 +37,7 @@
                         <a href="crud-articles.html" class="nav-link">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a href="signin.html" class="nav-link">Sign In</a>
+                        <a href="signin.html" class="nav-link">Sign Out</a>
                     </li>
                 </ul>
             </div>
