--- a/signin.html
+++ b/signin.html
@@ -10,7 +10,7 @@
 </head>
 <body class="text-center">
     <main class="form-signin">
-        <form>
+        <form method="" action="dashboard.html">
             <h1 class="h3 mb-3 fw-normal">Please Sign In</h1>
             <div class="form-floating">
                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
